fixes alignment on add asset warning, labels warning by issuer

--- a/extension/src/popup/components/WarningMessages/styles.scss
+++ b/extension/src/popup/components/WarningMessages/styles.scss
@@ -387,7 +387,6 @@
   position: fixed;
   height: fit-content;
   width: 100%;
-  bottom: -1.5rem;
   left: 0;
 
   &__wrapper {
